# windows_exe_info

./: Cargo.toml  readme.md
src/: icon.rs  lib.rs  link.rs  manifest.rs  test.rs  versioninfo.rs
