[package]
name = "windows_exe_info"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A cargo build script library for adding file information to windows executables"
repository = "https://github.com/MasterOfRespawn/windows_exe_info"
readme = "readme.md"

[features]
default = ["icon_ico", 
"icon_placeholder", 
"embed_resource"]
build_cfg=["dep:build_cfg"]
embed_resource=["dep:embed-resource"]
icon_ico = []
icon_png = ["icon_ico"]
icon_xxx = ["icon_png"]
icon_svg = ["icon_xxx"]
icon_xcf = ["icon_xxx"]
icon_placeholder = ["icon_ico"]
icon_autodetect = []

[dependencies]
build_cfg = { version = "1.1.0", optional = true }
embed-resource = { version = "1.8.0", optional = true }