[package]
name = "windows_exe_info"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "A cargo build script library for adding file information to windows executables"
repository = "https://github.com/MasterOfRespawn/windows_exe_info"
readme = "readme.md"
keywords = ["cargo", "build", "windows", "resource", "manifest"]

[features]
default = ["icon_ico",
"icon_placeholder",
"versioninfo",
"embed_resource",
"windows_only"]
build_cfg=["dep:build_cfg"]
windows_only = []
embed_resource=["dep:embed-resource"]
icon_ico = []
icon_png = ["icon_ico"]
icon_magick = ["icon_png"]
icon_placeholder = ["icon_ico"]
icon_autodetect = []
versioninfo = []
manifest = []

[dependencies]
build_cfg = { version = "1.1.0", optional = true }
embed-resource = { version = "2.4", optional = true }
